feat: add MVP aimporter impementation. The 99% of import errors should be raised from the modell validation.
